k8s/grafana/grafana-serviceaccount.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
